--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,17 @@ body {
 }
 
 .nav-link {
-
+    transition: all .4s ease;
     color: #fff;
     text-decoration: none;
 }
 
-.header-contact {}
+.nav-link:hover,
+.nav-link:active,
+.footer__link:hover {
+    transition: all 0.5s ease;
+    color: #4080bf;
+}
 
 .contact-btn {
     padding: 13px 28px;
@@ -69,13 +74,11 @@ body {
     background-color: #4080bf;
 }
 
-.header-contact button:hover {
+.header-contact button:hover,
+.main-block1 button:hover,
+.agency button:hover {
     background-color: darkblue;
-}
-
-.header-contact_btn span:hover {
-    color: #000;
-    background-color: #4575dc;
+    transition: all 0.5s ease;
 }
 
 .home {
@@ -84,6 +87,7 @@ body {
 
 
 .main-block1 {
+    transition: .4s;
     max-width: 1110px;
     height: 650px;
     background: url('../img/home.png') no-repeat;
@@ -91,7 +95,6 @@ body {
     background-size: cover;
     border-radius: 20px;
     position: relative;
-
 
 }
 
@@ -105,7 +108,7 @@ body {
     /* border: 2px solid #000; */
     font-weight: 700;
     font-size: 55px;
-    line-height: 92px;
+    line-height: 72px;
     color: #fff;
     width: 747px;
 
@@ -155,6 +158,8 @@ body {
 }
 
 .about-item-icon img {
+    transition: all .4s ease;
+    border-radius: 50%;
     margin-top: 10px;
     margin-left: 5px;
 }
@@ -208,8 +213,6 @@ body {
     margin-top: 30px;
 }
 
-.special-item-icon img {}
-
 .special-item-text h4 {
     padding-top: 20px;
     font-size: 24px;
@@ -251,6 +254,7 @@ body {
 }
 
 .more {
+    transition: all .4s ease;
     font-weight: normal;
     font-size: 14px;
     line-height: 20px;
@@ -268,6 +272,11 @@ body {
     display: block;
 }
 
+.more:hover {
+    color: blue;
+    transition: all 0.5s ease;
+}
+
 .project-item-icon {
     margin-top: 40px;
     display: flex;
@@ -275,9 +284,27 @@ body {
 }
 
 .project-item-icon img {
+    transition: all .4s ease;
     border-radius: 20px;
     height: 305px;
     width: 540px;
+}
+
+.project-item-icon img:hover,
+.user__img:hover,
+.sub_user__img:hover,
+.avatar__icon img:hover {
+    transform: scale(1.2);
+    box-shadow: 20px 10px 30px #A1C5E9;
+    transition: all .4s ease;
+
+}
+
+.about-item-icon img:hover {
+    transform: scale(1.2);
+    transition: all .4s ease;
+    box-shadow: 20px 10px 30px #A1C5E9;
+
 }
 
 
@@ -304,8 +331,7 @@ body {
 
 
 .sup_user__link {
-    margin-bottom: 20px;
-    margin-right: 10px;
+    margin: 20px 0 10px 0;
     text-decoration: none;
 }
 
@@ -353,6 +379,25 @@ body {
     line-height: 26px;
 }
 
+.img_1 {
+    transition: all .4s ease;
+    border-radius: 100px 0 0 0;
+}
+
+.img_2 {
+    transition: all .4s ease;
+    border-radius: 0 100px 0 0;
+}
+
+.img_4 {
+    transition: all .4s ease;
+    border-radius: 0 0 100px 0;
+}
+
+.img_3 {
+    transition: all .4s ease;
+    border-radius: 0 0 0 100px;
+}
 
 
 .sub_user__link {
@@ -404,7 +449,7 @@ body {
     border-radius: 20px;
     background-color: #1E2028;
     height: 500px;
-    max-width: 540px;
+    max-width: 580px;
     padding: 30px 0 0 50px;
 }
 
@@ -445,7 +490,7 @@ body {
 }
 
 .logo_dotted {
-    margin-left: 195px;
+    margin-left: 185px;
 }
 
 .logo_dotted img {
@@ -537,18 +582,18 @@ body {
     margin-left: 50px;
 }
 
-.footer__icon {
+.footer__info {
     text-align: left;
 }
 
-.footer__icon h4 {
+.footer__info h4 {
     color: #fff;
     font-size: 34px;
     font-weight: 800;
     line-height: 27px;
 }
 
-.footer__icon p {
+.footer__info p {
     margin-top: 20px;
     width: 209px;
     font-size: 18px;
@@ -558,13 +603,21 @@ body {
     color: #fff;
 }
 
-.avatar__icon {
-    position: relative;
-    right: 12px;
+.footer-social {
+    margin-top: 20px;
+    display: flex;
+    column-gap: 10px;
 }
 
-.avatar__icon img {
-    padding: 30px 0 0 7px;
+.social__img {
+    transition: all .4s ease;
+    border-radius: 50%;
+}
+
+.social__img:hover {
+    transform: scale(1.2);
+    transition: all .4s ease;
+    box-shadow: 20px 10px 30px #A1C5E9;
 }
 
 
@@ -573,11 +626,12 @@ body {
     list-style-type: none;
 }
 
-.footer__text {
+.footer__link {
+    transition: all .4s ease;
     text-decoration: none;
 }
 
-.footer__text h4 {
+.footer__text {
     font-size: 34px;
     font-weight: 800;
     line-height: 27px;
@@ -586,20 +640,20 @@ body {
 
 .footer__item {
     margin-top: 30px;
-    line-height: 32px;
-    color: #fff;
-    font-size: 18px;
-    letter-spacing: 0.02em;
 }
 
-.footer_btn h4 {
+.footer__link {
+    color: #fff;
+}
+
+.footer_input h4 {
     font-weight: 800;
     font-size: 34px;
     line-height: 27px;
     color: #fff;
 }
 
-.footer_btn img {
+.footer_input img {
     width: 16.5px;
     height: 16.5px;
 
@@ -608,6 +662,7 @@ body {
     right: 35px;
     z-index: 2;
 }
+
 
 .input {
     margin-top: 30px;
